--- a/LoginForm/LoginForm/Views/User/Index.cshtml
+++ b/LoginForm/LoginForm/Views/User/Index.cshtml
@@ -4,12 +4,15 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container-md">
-    <br />
-
-
-    <a href="@Url.Action("Login")" class="btn btn-success col-md-5" role="button">Login</a>
-    <br />
-    <br />
-    <a href="@Url.Action("Register")" class="btn btn-success col-md-5" role="button">Register</a>
-</div>
+<center>
+    <div class="container-md m-5" style=" text-align: center; height:300px;width: 45%; border-radius: 4px; box-shadow: 0px 7px 10px 0px rgba(0, 0, 0, 0.2); ">
+        <br/>
+        <h1>Hello World! </h1>
+        <h5>MVC APPLICATION</h5>
+        <br />
+        <a href="@Url.Action("Login")" class="btn btn-success col-md-5" role="button">Login</a>
+        <br />
+        <br />
+        <a href="@Url.Action("Register")" class="btn btn-success col-md-5" role="button">Register</a>
+    </div>
+</center>
