added welcome view

--- a/LoginForm/LoginForm/Views/Dash/AdminDash.cshtml
+++ b/LoginForm/LoginForm/Views/Dash/AdminDash.cshtml
@@ -10,9 +10,9 @@
 <table class="table table-striped">
     <thead>
         <tr>
-            <th>UserID</th>
+            <th>Id</th>
             <th>Name</th>
-            <th>Date of Birth</th>
+            <th>DOB</th>
             <th>Username</th>
             <th>Gender</th>
             <th>UserType</th>
