--- a/LoginForm/LoginForm/Views/User/Login.cshtml
+++ b/LoginForm/LoginForm/Views/User/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Login";
 }
 
-<h1><b>Login</b></h1>
+<h1>WELCOME BACK!</h1>
 
 @using (Html.BeginForm("Login"))
 {
@@ -18,7 +18,7 @@
         <div class="col-lg-12">@ViewBag.Message</div>
     </div>
 
-
+    <p>Please enter your details to sign in.</p>
     <div class="form-group">
         @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-5">
