--- a/LoginForm/LoginForm/Views/User/Register.cshtml
+++ b/LoginForm/LoginForm/Views/User/Register.cshtml
@@ -17,6 +17,15 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
+        @Html.LabelFor(model => model.Id, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-5">
+            @Html.EditorFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <br/>
+
+    <div class="form-group">
         @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-5">
             @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
